# SusMat-Crystallinity-Calculator

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  CHANGELOG.md  CRAFS_2D_input_xeuss.py  LICENSE  README.md  WAXS_ta_v4.py  cell_cryst.py  pyproject.toml
src/smcryst/: CRAFS_2D_input_xeuss.py  __init__.py  cell_cryst.py  cell_cryst_remote.py  data_importer.py
