[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "SusMat-Crystallinity-Calculator"
version = "2.0.3"
authors = [
  { name="Samuel Eyley", email="samuel.eyley@kuleuven.be" },
]
description = "A collection of python scripts for determining the crystallinity of cellulosic samples"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-irodsclient>=2.0.0",
    "numpy",
    "matplotlib",
    "scipy",
    "fonttools>=4.60.2",
    "pillow>=12.1.1",
]

[project.urls]
Homepage = "https://gitlab.kuleuven.be/susmat/cellulose/waxs-crystallinity-calculator"
Issues = "https://gitlab.kuleuven.be/susmat/cellulose/waxs-crystallinity-calculator/-/issues"

[project.scripts]
sm-cryst = "smcryst.cell_cryst:cli"
irods-cryst = "smcryst.cell_cryst_remote:cli"

[tool.uv.build-backend]
module-name = "smcryst"
